# wilco

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  PERFORMANCE_ANALYSIS.md  Procfile  README.md  RELEASE.md  RELEASE_PLAN.md  REVIEW-pre-compile-bundles-v2.md  SECURITY_AUDIT.md  TEST_COVERAGE_ANALYSIS.md  pyproject.toml
.claude/commands/: release.md
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  state.json
.github/workflows/: cicd.yml
docs/: conf.py  django.rst  fastapi.rst  index.rst  javascripts.rst
docs/explanation/: architecture.rst  bundling.rst  index.rst  live-preview.rst  request-lifecycle.rst  standalone-loader.rst
docs/how-to/: django.rst  fastapi.rst  flask.rst  index.rst  starlette.rst
docs/internals/: standalone.rst
docs/reference/: cli.rst  components.rst  index.rst  javascript.rst
docs/specs/: components.rst  http-caching.rst  index.rst
docs/tutorials/: index.rst
examples/: CLAUDE.md  Makefile  Procfile
examples/asgi-minimal/: Makefile  README.md  pyproject.toml
examples/asgi-minimal/app/: __init__.py  asgi.py  database.py  models.py  routes.py  templates.py
examples/asgi-minimal/resources/: db.sqlite3
examples/asgi-minimal/resources/templates/: 404.html  base.html  product_list.html
examples/common/: specifications.rst  theme.css
examples/django/: Makefile  README.md  db.sqlite3  pyproject.toml
examples/django-project/: .gitignore  Makefile  README.md  pyproject.toml
examples/django-project/ecommerce/: settings.py  urls.py
examples/django-project/fixtures/: sample_products.json
examples/django-project/store/: admin.py  models.py  urls.py  views.py
examples/django-project/store/migrations/: 0001_initial.py  0002_alter_product_image_url.py  0003_remove_product_image_url_product_image.py
examples/django-project/templates/: base.html
examples/django-project/templates/store/: product_detail.html  product_list.html
examples/django-unfold/: Makefile  README.md  pyproject.toml
examples/django-unfold/apps/store/: admin.py  apps.py  models.py  tests.py
examples/django-unfold/config/: settings.py  urls.py
examples/django-unfold/resources/fixtures/: sample_products.json
examples/django-unfold/resources/static/: theme.css
examples/django-unfold/resources/templates/: base.html
examples/django-vanilla/: .gitignore  Makefile  README.md  pyproject.toml
examples/django-vanilla/apps/store/: admin.py  views.py
examples/django-vanilla/config/: asgi.py  settings.py  urls.py
examples/django-vanilla/resources/templates/: base.html
examples/django-vanilla/resources/templates/store/: product_detail.html  product_list.html
examples/django/apps/store/: admin.py  views.py
examples/django/apps/store/components/: __init__.py
examples/django/apps/store/components/product/: Product.tsx  __init__.py
examples/django/apps/store/components/product_list/: ProductList.styles.ts  ProductList.tsx  schema.json
examples/django/apps/store/components/product_preview/: ProductPreview.tsx  schema.json
examples/django/apps/store/migrations/: 0001_initial.py
examples/django/config/: settings.py  urls.py  wsgi.py
examples/django/resources/static/css/: admin.css
examples/django/resources/templates/store/: product_detail.html
examples/e2e/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
examples/e2e/src/adapters/: AsgiMinimalAdapter.ts  DjangoUnfoldAdapter.ts  DjangoVanillaAdapter.ts  FastAPIAdapter.ts  FlaskAdapter.ts  FrameworkAdapter.ts  StarletteAdapter.ts  (+2 more)
examples/fastapi/: .gitignore  Makefile  Procfile  README.md  db.sqlite3  pyproject.toml
examples/fastapi/app/: __init__.py  admin.py  database.py  fixtures.py  main.py  models.py
examples/fastapi/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/fastapi/frontend/src/: App.tsx  index.css
examples/fastapi/frontend/src/components/: Layout.tsx  ProductCard.tsx  ProductDetail.tsx  ProductList.tsx
examples/fastapi/resources/fixtures/: sample_products.json
examples/fastapi/resources/static/wilco/: admin-preview-inject.js  live-loader-fastapi.js
examples/fastapi/tests/: conftest.py  test_admin_preview.py
examples/flask/: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
examples/flask/app/: __init__.py  admin.py  database.py  fixtures.py  main.py  models.py  widgets.py
examples/flask/resources/static/wilco/: admin-preview-inject.js  live-loader-flask.js
examples/flask/resources/templates/: 404.html  base.html  product_detail.html  product_list.html
examples/flask/tests/: conftest.py  test_admin_preview.py  test_widgets.py
examples/starlette/: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
examples/starlette/app/: __init__.py  admin.py  database.py  fixtures.py  main.py  models.py  widgets.py
examples/starlette/resources/static/wilco/: admin-preview-inject.js  live-loader-starlette.js
examples/starlette/resources/templates/: 404.html  base.html  product_detail.html  product_list.html
examples/starlette/tests/: __init__.py  test_app.py
examples/wsgi-minimal/: .gitignore  Makefile  README.md  pyproject.toml
examples/wsgi-minimal/app/: __init__.py  database.py  models.py  routes.py  templates.py  wsgi.py
examples/wsgi-minimal/resources/: db.sqlite3
examples/wsgi-minimal/resources/templates/: base.html  product_detail.html
src/wilco/: CLAUDE.md  __init__.py  __main__.py  build.py  bundler.py  manifest.py  registry.py
src/wilco/bridges/: __init__.py  base.py  fastapi.py
src/wilco/examples/: __init__.py
src/wilcojs/: CLAUDE.md
src/wilcojs/react/: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tests/: conftest.py  test_bridges_base.py  test_bridges_django.py  test_bridges_fastapi.py  test_bridges_prebuilt.py  test_bridges_starlette.py  test_build.py  test_bundler.py  test_cli.py  test_django_finders.py  test_init.py  test_manifest.py  test_registry.py
(+115 files in other folders)
