[project]
name = "wilco"
dynamic = ["version"]
description = "Serve React components from Python backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["react", "components", "django", "fastapi", "typescript", "esbuild"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/user/wilco"
Documentation = "https://github.com/user/wilco#readme"
Repository = "https://github.com/user/wilco"
Issues = "https://github.com/user/wilco/issues"

[project.scripts]
wilco = "wilco.__main__:main"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115.0",
]
django = [
    "django>=4.2.0",
]
dev = [
    "wilco[fastapi,django]",
    "uvicorn[standard]>=0.32.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "twine>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/wilco/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wilco"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["node_modules", ".*"]

[tool.ruff.format]
indent-style = "space"

[dependency-groups]
dev = [
    "hatch>=1.16.2",
]

