[project]
name = "wilco-asgi-minimal-example"
version = "0.1.0"
description = "Minimal ASGI example demonstrating wilco integration without a framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "uvicorn>=0.32",
    "wilco",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
wilco = { path = "../../", editable = true }
