[project]
name = "fastapi-ecommerce-example"
version = "0.1.0"
description = "Example FastAPI ecommerce site showcasing wilco integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "sqladmin>=0.20.0",
    "aiosqlite>=0.20.0",
    "wilco",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
wilco = { path = "../..", editable = true }
