[project]
name = "wilco-flask-example"
version = "0.1.0"
description = "Flask example for wilco components with Flask-Admin"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-admin>=1.6",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "wilco",
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv.sources]
wilco = { path = "../../", editable = true }
