[project]
name = "wilco-starlette-example"
version = "0.1.0"
description = "Starlette example for wilco components"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40.0",
    "starlette-admin>=0.14.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.0.0",
    "wilco",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
wilco = { path = "../../", editable = true }
